<resources>
    <string name="app_name">Spiritual Tablets</string>
    <string name="hello_there">HELLO THERE! WELCOME BACK</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forger_password">Forger Password?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_up_to_start_your_journey">Sign up to start your journey</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update</string>
    <string name="verify_mobile_no">Verify Mobile No</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter verification code if not automatically authenticated</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="books">Books</string>
    <string name="news_letters">News Letters</string>
    <string name="log_out">Log out</string>
    <string name="user_profile">User Profile</string>
    <string name="login">Already user? LogIn</string>
    <string name="no_internet_connection0">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="telugu_books_list">Telugu Books List</string>
    <string name="list">List</string>
    <string name="english_books_list">English Books List</string>
    <string name="telugu_audio_list">Telugu Audio List</string>
    <string name="zero">0:00</string>
    <string name="about_us">About Us</string>
    <string name="founder">Founder</string>
    <string name="founder_desc"><![CDATA[Dr. Gopala Krishna is a Medical Doctor from India who has 10 years of clinical experience and worked as DMO in Neuro Surgery, Pediatric and General Medicine department. He also has private practice in rural areas and worked as Medical Officer for Jarawa tribes in Andaman Islands.\n\n“Dr.Gopala Krishna” is also a spiritual scientist. He is an enlightened yogi, mystic and visionary who have dedicated himself to the elevation of the physical, mental, and spiritual well-being of people. He has shown a path for the people to attain natural joy and to live life with experience from their own inner nature through Pyramid power and Spiritual Tablets. His scientific approach towards spirituality and work towards the uplift of the humanity have received accolades in southern India, Malaysia, Singapore, Andaman, US & UK. Spiritual Tablets are the most profound, with greater intensity from his deep understanding and wisdom which can change the very core of the being.\n\nBelonging to no particular religion or tradition, “Spiritual Tablets” incorporates the modern person to the spiritual sciences. Spiritual Tablets, are the out pouring of his blissfulness, finds expression in the form of ceaseless offering to all beings. His life and Spiritual Tablets are invitation to connect with the divinity within us through individual transformation and welcomes the silent revolution of self realization.]]></string>
    <string name="introduction_desc">The world has become too materialistic and sadly we live in it, forgetting about nature. Society we live in got familiarize to mechanical life resultantly, lameness has spread in varied forms affecting a person\'s body, mind, spirit and social well-being that is leading to inadequacy of peace, pleasure and happiness. In order to decimate this \'Brahmastra\', a holistic health approach, was incorporated by name “SPIRITUAL TABLETS”. During the past 12 years a lot of research has been done and now, foundation which was started with an aim to “serve all” is a pride for the world.\n\n In the last 6 years, a group of spiritual counselors and volunteers, under the guidance of “Dr. Gopala Krishna” has developed 350 spiritual tablets in the form of text, audio and audio visuals. These Spiritual Concepts will change our internal belief system, that help us to transpose ourselves in order to open to the universe for its guidance in all circumstances.\n\n We conducted various training workshops which lead to the treasury of spiritual health care centers throughout the world, trained multiple cases teaching “meditation, spiritual counseling, spiritual guidance and spiritual tablets”.</string>
    <string name="history_origin"><![CDATA[History & Origin]]></string>
    <string name="history_origin_desc">Pyramid Spiritual Societies Movement (PSSM) was founded by enlightened master “Brahmarshi Patriji” in the year 1990 with the objective, spiritual and harmonious living and bringing its benefits within the easy reach of all humanity, without any barriers of class, religion or region. Starting from its humble beginning with “The Kurnool Spiritual Society” in 1990, the Pyramid Meditation Movement is now spread by 2,000 independent and autonomous Pyramid Spiritual Societies involving millions of active members and volunteers across India, New Zealand, Australia, USA, UK, Singapore, Malaysia, UAE, Vietnam, Mauritius and Sri Lanka.\n\n The Pyramid Spiritual Societies Movement is non-religious, non-cult, non-profit voluntary organization with the mission to spread “Anapanasati Meditation, Vegetarianism and Pyramid Power” to everyone.\n\n “Dr. Gopala Krishna” is a medical doctor who started his journey of spiritual science in search of happiness and the truth, under the guidance of “Brahmarshi Patriji” and specially trained by grand master “Paul Vijay Kumar”. In this journey he got enlightened and realized that “Spiritual intellect is the root – physical health is the fruit”. He started sharing the same with his patients who approached him for medical treatment. As a part of this, he established spiritual health care centers and maintained them for ten years in different parts of India, also offered esteemed spiritual services as an ancillary to qualified treatment with the help of senior masters who are trained by him.\n\n Now we want to expand our services all over the world through offering franchise for establishing such centers. For this we established and registered a Non-Profit organization which is structured from centre in charge to the CEO.</string>
    <string name="videos_list">Videos List</string>
    <string name="introduction">Introduction</string>
    <string name="principle">Principle</string>
    <string name="pyramid_doctors">Pyramid Doctors</string>
    <string name="outlets">Outlets</string>
    <string name="organisation">Organisation</string>
    <string name="principle_desc_1"><![CDATA[As per the World Health Organisation definition, the main aim of these spiritual health care centres is to give good health by providing basic solution with self-energy for physical, mental, social and spiritual disparities. The main objective is to give extensive training in meditation & spiritual science apart from traditional medical system.]]></string>
    <string name="key_quotes">Key Quotes</string>
    <string name="key_quotes_desc">1. Lord Sri Krishna in Bhagavadgita – “Gnaanagni Dagdha Karmaanam !” \n\n 2. Jesus Christ in Holy Bible – “A good word brings relief”. \n\n 3. Brahmarshi Patriji – “Knowledge due to Meditation – freedom due to knowledge”. \n\n 4. Patriji – “Our sins are our weaknesses” – “Non-vegetarian is sinful food” \n\n 5. Patriji – “Leave Violence – Follow non-violence”. \n\n 6. Patriji – Spiritual intellect is the root – physical health is the fruit. \n\n 7. Lack of Spiritual Knowledge is the root cause for all sufferings – By Dr Gk.</string>
    <string name="reason_for_illness">Reason for Illness:</string>
    <string name="reason_for_illness_desc">Due to irregular, unwanted and un-scientific food habits, thinking methods and mutual relationships.</string>
    <string name="flow_chart">Flow Chart</string>
    <string name="flow_chart_desc"><![CDATA[of\n 4 Levels -> Energy -> Knowledge -> Part of the Game -> No Mind\n\n Chakras -> Body Parts -> Gland -> Chakra -> Affirmation\n\nBody Parts -> Intellect Mind -> Energy Blocks -> Body Part\n\n Household -> Lack of clarity on purpose of life -> Unwanted and irregular thoughts -> Failure of the Household Objects -> Co-relates to the illness]]></string>
    <string name="mode_of_training_in_spiritual_health_care_centers">MODE OF TRAINING IN SPIRITUAL HEALTH CARE CENTERS</string>
    <string name="mode_of_training_in_spiritual_health_care_centers_desc">In this method, the persons with an ill-health are all considered as ECW (Energy-Consciousness-Wisdom) units, who are momentarily stagnated in unscientific belief systems. After an initial audio visual demo, they will be trained to meditate on ‘Natural breath observation’. There after importance of vegetarian food, significance of pyramid power and spiritual science will be explained. They are allowed to practice it for a minimum of 40 days at their home or centre and during which there will be a follow-up.Periodically, they can avail the opportunity to participate in group meditation and spiritual sharing with masters. They have to follow the spiritual advice given in the form of spiritual tablets during counseling which are available at libraries and spiritual health care centers. \n\nAfter getting symptomatic relief by basic training, they are allowed to participate in meditation classes to share their experiences. In due course of time, the patient should be examined by certified doctors (patient’s family doctors or by the organization) and the medication will be regularized accordingly. In some cases, as part of training they need to learn fine arts like dance and music. \n\nSimilar to other medical practices of prescribing tablets, 350 SPIRITUAL TABLETS are prepared in Spiritual health system. They are the heart of Spiritual Health Care Centers. These tablets (concepts) are easily understood and can be remembered by the patients for implementing in their daily life. They are available in the form of pamphlets, pocket books and audio/visuals. Prescribing these tablets as per the experience and requirement of patient is the main practice in Life health counseling. \n\nIn many cases, it has been proved that any kind of health problem is due to ignorance and lack of spiritual knowledge. Through health counseling, it will be cured at the root-level and the patient will be made self-sufficient to attain complete health.</string>
    <string name="procedure_initiation">Procedure/Initiation</string>
    <string name="organisation_desc_1">Sri Nityananda Pyramid Sahaja Dhyana Arogya Seva Trust- REGD NO: 10/2012</string>
    <string name="sl_no">Sl. No</string>
    <string name="name_of_the_trust_board_member">Name of the Trust Board Member</string>
    <string name="designation">Designation</string>
    <string name="_1">1</string>
    <string name="dr_p_s_gopala_krishna">Dr.P.S Gopala Krishna</string>
    <string name="managing_trustee_chairman"><![CDATA[Managing Trustee & Chairman]]></string>
    <string name="_2">2</string>
    <string name="sri_bomminayani_trinadha">Sri Bomminayani Trinadha</string>
    <string name="vice_chairman">Vice Chairman</string>
    <string name="donate">Donate</string>
    <string name="contact_us">Contact Us</string>
    <string name="daily_tip">Daily Tip</string>
    <string name="blog">Blog</string>
</resources>