<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerifyMobileNo"
    android:background="#C3A1C3"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FAF5F5">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/mobile"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/verify_mobile_no"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code_if_not_automatically_authenticated"
            android:textAlignment="center"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:hint="@string/enter_otp"
                android:id="@+id/verification_code_entered_by_user"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <Button
                android:background="#C3A1C3"
                android:id="@+id/verify_btn"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/verify" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>